--- a/serial_lib/build.gradle
+++ b/serial_lib/build.gradle
@@ -35,5 +35,6 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     implementation 'androidx.appcompat:appcompat:1.1.0'
+    api 'com.github.cl-6666:xlog:V2.0.0'
     testImplementation 'junit:junit:4.12'
 }
