使用介绍提交

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MyApplication">
         <activity
-            android:name=".MainActivity2"
+            android:name=".MainJavaActivity"
             android:exported="true"></activity>
         <activity android:name=".SelectSerialPortActivity">
             <intent-filter>
