--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,8 +40,8 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'com.google.android.material:material:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
-    implementation project(path: ':serial_lib')
-//    implementation 'com.github.cl-6666:serialPort:v1.0.0'
+//    implementation project(path: ':serial_lib')
+    implementation 'com.github.cl-6666:serialPort:v2.0.0'
 
 
 }
