--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,27 +2,47 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.cl.myapplication">
 
+
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS"/>
+
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
+        android:name=".App"
         android:theme="@style/Theme.MyApplication">
+
+        <meta-data
+            android:name="design_width_in_dp"
+            android:value="1080" />
+        <meta-data
+            android:name="design_height_in_dp"
+            android:value="1920" />
+
         <activity
             android:name=".MainJavaActivity"
-            android:exported="true"></activity>
-        <activity android:name=".SelectSerialPortActivity">
+            android:exported="true"
+            android:windowSoftInputMode="stateHidden|stateUnchanged">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".MainActivity">
+        <activity android:name=".SelectSerialPortActivity">
+<!--                        <intent-filter>-->
+<!--                            <action android:name="android.intent.action.MAIN" />-->
 
-
+<!--                            <category android:name="android.intent.category.LAUNCHER" />-->
+<!--                        </intent-filter>-->
         </activity>
+        <activity
+            android:name=".MainActivity"
+            android:windowSoftInputMode="stateHidden|stateUnchanged"></activity>
     </application>
 
 </manifest>
