--- a/serial_lib/build.gradle
+++ b/serial_lib/build.gradle
@@ -14,6 +14,7 @@ android {
                 arguments '-DANDROID_TOOLCHAIN=clang'
             }
         }
+
     }
     buildTypes {
         release {
@@ -27,6 +28,19 @@ android {
             path "src/main/cpp/CMakeLists.txt"
         }
     }
+
+
+    packagingOptions {
+        // 剔除这个包下的所有文件（不会移除签名信息）
+        exclude 'META-INF/*******'
+    }
+
+    android.libraryVariants.all { variant ->
+        // aar 输出文件名配置
+        variant.outputs.all { output ->
+            outputFileName = "${rootProject.name}-${android.defaultConfig.versionName}.aar"
+        }
+    }
 }
 
 dependencies {
@@ -37,4 +51,38 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.1.0'
     api 'com.github.cl-6666:xlog:V2.0.0'
     testImplementation 'junit:junit:4.12'
+}
+
+afterEvaluate {
+    // 排除 BuildConfig.class 和 R.class
+    generateReleaseBuildConfig.enabled = false
+    generateDebugBuildConfig.enabled = false
+    generateReleaseResValues.enabled = false
+    generateDebugResValues.enabled = false
+}
+
+tasks.withType(Javadoc) {
+    options.addStringOption('Xdoclint:none', '-quiet')
+    options.addStringOption('encoding', 'UTF-8')
+    options.addStringOption('charSet', 'UTF-8')
+}
+
+task sourcesJar(type: Jar) {
+    from android.sourceSets.main.java.srcDirs
+    classifier = 'sources'
+}
+
+task javadoc(type: Javadoc) {
+    source = android.sourceSets.main.java.srcDirs
+    classpath += project.files(android.getBootClasspath().join(File.pathSeparator))
+}
+
+task javadocJar(type: Jar, dependsOn: javadoc) {
+    classifier = 'javadoc'
+    from javadoc.destinationDir
+}
+
+artifacts {
+    archives javadocJar
+    archives sourcesJar
 }
