--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,8 +32,8 @@ android {
         jvmTarget = '1.8'
     }
 
-    dataBinding{
-        enabled = true
+    buildFeatures{
+        dataBinding=true
     }
 }
 
@@ -46,6 +46,7 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation project(path: ':serial_lib')
 //    implementation 'com.github.cl-6666:serialPort:v3.0.0'
+//    implementation 'com.github.cl-6666:serialPort:V3.1.2'
     // eventbus
     implementation 'org.greenrobot:eventbus:3.2.0'
     implementation 'com.github.getActivity:ToastUtils:9.6'
