--- a/build.gradle
+++ b/build.gradle
@@ -2,9 +2,15 @@
 buildscript {
     ext.kotlin_version = "1.3.72"
     repositories {
+        gradlePluginPortal()
         google()
-        jcenter()
         maven { url 'https://jitpack.io' }
+        mavenCentral()
+        maven { url 'https://dl.google.com/dl/android/maven2/' }
+        maven{ url 'https://maven.aliyun.com/repository/google'}
+        maven{ url 'https://maven.aliyun.com/repository/gradle-plugin'}
+        maven{ url 'https://maven.aliyun.com/repository/public'}
+        maven{ url 'https://maven.aliyun.com/repository/jcenter'}
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:4.1.2'
@@ -17,9 +23,15 @@ buildscript {
 
 allprojects {
     repositories {
+        gradlePluginPortal()
         google()
-        jcenter()
         maven { url 'https://jitpack.io' }
+        mavenCentral()
+        maven { url 'https://dl.google.com/dl/android/maven2/' }
+        maven{ url 'https://maven.aliyun.com/repository/google'}
+        maven{ url 'https://maven.aliyun.com/repository/gradle-plugin'}
+        maven{ url 'https://maven.aliyun.com/repository/public'}
+        maven{ url 'https://maven.aliyun.com/repository/jcenter'}
     }
 }
 
