增加多串口黏包场景，解决一些已知问题 优化一下代码

--- a/serial_lib/build.gradle
+++ b/serial_lib/build.gradle
@@ -42,6 +42,11 @@ android {
             outputFileName = "${rootProject.name}-${android.defaultConfig.versionName}.aar"
         }
     }
+
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
 }
 
 dependencies {
