--- a/build.gradle
+++ b/build.gradle
@@ -2,18 +2,12 @@
 buildscript {
     ext.kotlin_version = "1.3.72"
     repositories {
-        gradlePluginPortal()
         google()
+        jcenter()
         maven { url 'https://jitpack.io' }
-        mavenCentral()
-        maven { url 'https://dl.google.com/dl/android/maven2/' }
-        maven{ url 'https://maven.aliyun.com/repository/google'}
-        maven{ url 'https://maven.aliyun.com/repository/gradle-plugin'}
-        maven{ url 'https://maven.aliyun.com/repository/public'}
-        maven{ url 'https://maven.aliyun.com/repository/jcenter'}
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:4.2.2'
+        classpath 'com.android.tools.build:gradle:4.1.2'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
 
         // NOTE: Do not place your application dependencies here; they belong
@@ -23,15 +17,9 @@ buildscript {
 
 allprojects {
     repositories {
-        gradlePluginPortal()
         google()
+        jcenter()
         maven { url 'https://jitpack.io' }
-        mavenCentral()
-        maven { url 'https://dl.google.com/dl/android/maven2/' }
-        maven{ url 'https://maven.aliyun.com/repository/google'}
-        maven{ url 'https://maven.aliyun.com/repository/gradle-plugin'}
-        maven{ url 'https://maven.aliyun.com/repository/public'}
-        maven{ url 'https://maven.aliyun.com/repository/jcenter'}
     }
 }
 
