--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,17 +1,16 @@
 plugins {
-    id 'com.android.application'
-    id 'kotlin-android'
-    id 'kotlin-android-extensions'
+    alias(libs.plugins.android.application)
+    alias(libs.plugins.kotlin.android)
 }
 
 android {
-    compileSdkVersion 29
-    buildToolsVersion "30.0.1"
+    namespace 'com.cl.myapplication'
+    compileSdk 36
 
     defaultConfig {
         applicationId "com.cl.myapplication"
-        minSdkVersion 21
-        targetSdkVersion 29
+        minSdk 24
+        targetSdk 36
         versionCode 401
         versionName "4.0.1"
 
@@ -25,11 +24,11 @@ android {
         }
     }
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility JavaVersion.VERSION_11
+        targetCompatibility JavaVersion.VERSION_11
     }
     kotlinOptions {
-        jvmTarget = '1.8'
+        jvmTarget = '11'
     }
     buildFeatures{
         dataBinding=true
@@ -38,18 +37,33 @@ android {
 
 dependencies {
 
-    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-    implementation 'androidx.core:core-ktx:1.2.0'
-    implementation 'androidx.appcompat:appcompat:1.1.0'
-    implementation 'com.google.android.material:material:1.1.0'
-    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
-//    implementation project(path: ':serial_lib')
-    implementation 'com.github.cl-6666:serialPort:v4.1.1'
-    // eventbus
+    implementation libs.androidx.core.ktx
+    implementation libs.androidx.appcompat
+    implementation libs.material
+    implementation 'androidx.cardview:cardview:1.0.0'
+    testImplementation libs.junit
+    androidTestImplementation libs.androidx.junit
+    androidTestImplementation libs.androidx.espresso.core
+
     implementation 'org.greenrobot:eventbus:3.2.0'
     implementation 'com.github.getActivity:ToastUtils:9.6'
     implementation 'com.github.JessYanCoding:AndroidAutoSize:v1.2.1'
     implementation 'com.google.code.gson:gson:2.8.6'
+
+    implementation project(path: ':serial_lib')
+
+//    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+//    implementation 'androidx.core:core-ktx:1.2.0'
+//    implementation 'androidx.appcompat:appcompat:1.1.0'
+//    implementation 'com.google.android.material:material:1.1.0'
+//    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+////    implementation project(path: ':serial_lib')
+//    implementation 'com.github.cl-6666:serialPort:v4.1.1'
+//    // eventbus
+//    implementation 'org.greenrobot:eventbus:3.2.0'
+//    implementation 'com.github.getActivity:ToastUtils:9.6'
+//    implementation 'com.github.JessYanCoding:AndroidAutoSize:v1.2.1'
+//    implementation 'com.google.code.gson:gson:2.8.6'
 
 
 }
