--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -36,7 +36,7 @@
         </activity>
 
         <activity
-            android:name=".MainJavaActivity"
+            android:name=".SingleSerialPortActivity"
             android:exported="true"
             android:screenOrientation="landscape">
 <!--            <intent-filter>-->
