--- a/serial_lib/build.gradle
+++ b/serial_lib/build.gradle
@@ -1,6 +1,6 @@
 plugins {
     id 'com.android.library'
-    id 'org.jetbrains.kotlin.android'
+    id 'maven-publish'
 }
 android {
     namespace 'com.kongqw.serialportlibrary'
@@ -10,14 +10,8 @@ android {
         minSdk 24
         targetSdk 36
         versionCode 500
-        versionName "5.0.0"
+        versionName "5.0.1"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
-        externalNativeBuild {
-            cmake {
-                arguments '-DANDROID_TOOLCHAIN=clang'
-            }
-        }
-
     }
     buildTypes {
         release {
@@ -32,27 +26,14 @@ android {
         }
     }
 
-
     packagingOptions {
         // 剔除这个包下的所有文件（不会移除签名信息）
         exclude 'META-INF/*******'
     }
 
-    android.libraryVariants.all { variant ->
-        // aar 输出文件名配置
-        variant.outputs.all { output ->
-            outputFileName = "${rootProject.name}-${android.defaultConfig.versionName}.aar"
-        }
-    }
-
-
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_11
         targetCompatibility JavaVersion.VERSION_11
-    }
-
-    kotlinOptions {
-        jvmTarget = '11'
     }
 }
 
@@ -63,5 +44,6 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 }
+
 
 
