--- a/serial_lib/build.gradle
+++ b/serial_lib/build.gradle
@@ -2,17 +2,24 @@ plugins {
     id 'com.android.library'
     id 'maven-publish'
 }
+
 android {
-    namespace 'com.kongqw.serialportlibrary'
-    compileSdk 36
+    namespace "com.cl.serialportlibrary"
+    compileSdk 34
 
     defaultConfig {
-        minSdk 24
-        targetSdk 36
-        versionCode 500
-        versionName "5.0.1"
-        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        minSdk 21
+        targetSdk 34
+        versionCode 1
+        versionName "1.0"
+        consumerProguardFiles "consumer-rules.pro"
     }
+    
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_17
+        targetCompatibility JavaVersion.VERSION_17
+    }
+
     buildTypes {
         release {
             minifyEnabled false
@@ -25,25 +32,13 @@ android {
             path "src/main/cpp/CMakeLists.txt"
         }
     }
-
-    packagingOptions {
-        // 剔除这个包下的所有文件（不会移除签名信息）
-        exclude 'META-INF/*******'
-    }
-
-    compileOptions {
-        sourceCompatibility JavaVersion.VERSION_11
-        targetCompatibility JavaVersion.VERSION_11
-    }
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation "org.jetbrains.kotlin:kotlin-stdlib:2.0.21"
+    implementation fileTree(dir: "libs", include: ["*.jar"])
+    implementation 'androidx.appcompat:appcompat:1.6.1'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 }
-
-
 
