--- a/serial_lib/build.gradle
+++ b/serial_lib/build.gradle
@@ -10,9 +10,20 @@ android {
     defaultConfig {
         minSdk 21
         targetSdk 34
-        versionCode 506
-        versionName "5.0.6"
+        versionCode 507
+        versionName "5.0.7"
         consumerProguardFiles "consumer-rules.pro"
+        
+        externalNativeBuild {
+            cmake {
+                // 设置 Android 平台和 STL
+                arguments "-DANDROID_PLATFORM=android-21",
+                          "-DANDROID_STL=c++_shared"
+            }
+        }
+        ndk {
+            abiFilters 'arm64-v8a', 'armeabi-v7a', 'x86', 'x86_64'
+        }
     }
     
     compileOptions {
